<resources>
    <string name="app_name" translatable="false">VUCA Digital</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="your_customers_network" translatable="false">Your Customer Network</string>
    <string name="all" translatable="false">All</string>
    <string name="referrals" translatable="false">Referrals</string>
    <string name="leads" translatable="false">Leads</string>
    <string name="customer_name" translatable="false">Customer name</string>
    <string name="contact_name" translatable="false">Contact name</string>
    <string name="type" translatable="false">Type</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="customer_details" translatable="false">Customer Details</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="need_help">Need help?</string>
    <string name="contact_your_employer">Contact your employer</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="opportunities">Opportunities</string>
    <string name="tasks">Tasks</string>
    <string name="customers">Customers</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="opportunities_created_this_month">Opportunities created this month</string>
    <string name="_137">137</string>
    <string name="customers_created_this_month">Customers created this month</string>
    <string name="_000">000</string>
    <string name="view_products">View Products</string>
    <string name="view_analytics">View Analytics</string>
    <string name="products_and_services">Products and services</string>
    <string name="customer_type">Customer type:</string>
    <string name="billing_account_number">Billing account number:</string>
    <string name="account_number">Account number:</string>
    <string name="customer_email">Customer email:</string>
    <string name="telephone_number">Telephone number:</string>
    <string name="create">Create</string>
    <string name="prospect">Prospect</string>
    <string name="product_name">Product name</string>
    <string name="contract_period">Contract period</string>
    <string name="status">status</string>
    <string name="contract_end">Contract end</string>
    <string name="service_provider">Service Provider</string>
    <string name="contract_term">Contract Term</string>
    <string name="select">Select Item</string>

    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name:</string>
    <string name="task_category">Task Category:</string>
    <string name="task_description">Task Description:</string>
    <string name="person_assigned">Person Assigned:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="priority_level">Priority Level:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="task_list">Task List</string>
    <string name="done">Done</string>
    <string name="doing">Doing</string>
    <string name="to_do">To Do</string>
    <string name="priority">Priority</string>
    <string name="new_customer">New Customer</string>
    <string name="update_customer">Update Customer</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="task_status">Status:</string>
    <string name="customer">Customer name:</string>
    <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this task?</string>
    <string name="new_product">New Product</string>
    <string name="analytics">Analytics</string>
    <string name="opportunities_by_stage">OPPORTUNITIES BY STAGE</string>
    <string name="customer_type_distribution">CUSTOMER TYPE DISTRIBUTION</string>
    <string name="completed">Completed</string>
    <string name="achievements">Achievements</string>
    <string name="notification_history">Notification History</string>
    <string name="hide_notification">Hide notification</string>
    <string name="delete_notification">Delete notification</string>
    <string name="reset_visibility_for_all">Reset visibility for all</string>
    <string name="view_all_hidden_notifications">View all hidden notifications</string>
    <string name="hidden">Hidden</string>
    <string name="visible">Visible</string>
    <string name="try_choosing_another_filter">Try choosing another filter.</string>
    <string name="not_found">Not Found</string>
    <string name="try_entering_a_different_search_term">Try entering a different search term.</string>
    <string name="products_and_capital_services">Products and Services</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_opportunity">Edit Opportunity</string>
    <string name="name_of_opportunity">Name of Opportunity:</string>
    <string name="opportunity_name">Opportunity Name</string>
    <string name="value">Value:</string>
    <string name="priority_of_opportunity">Priority Of Opportunity:</string>
    <string name="lead_status_of_opportunity">Lead Status Of Opportunity:</string>
    <string name="stage_of_opportunity">Stage Of Opportunity:</string>
    <string name="date_of_opportunity">Date Of Opportunity:</string>
    <string name="edit_product">Edit Product</string>

    <string-array name="leadStatusOptions">
        <item>Select Lead Status</item>
        <item>Contract</item>
        <item>Contract Owner</item>
        <item>Away</item>
        <item>Closed Contract</item>
        <item>Not Interested</item>
    </string-array>

    <string-array name="priorityOptions">
        <item>Select Priority</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="stageOptions">
        <item>Select Stage</item>
        <item>Lead</item>
        <item>Prospect</item>
        <item>Open</item>
        <item>Closed</item>
        <item>Lost</item>
        <item>Open</item>

    </string-array>

    <string-array name="typeOptions">
        <item>Select Type</item>
        <item>Product</item>
        <item>Service</item>
    </string-array>


</resources>