<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/pageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_task"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"/>

            <!-- Task Name -->
            <TextView
                android:id="@+id/labelTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/task_name"/>

            <EditText
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:padding="15dp"
                android:background="@drawable/user_input_border"
                android:textSize="16sp"
                android:hint="@string/task_name"/>

            <!-- Category -->
            <TextView
                android:id="@+id/labelCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/task_category"/>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/user_input_border"
                android:spinnerMode="dropdown"/>

            <!-- Description -->
            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/task_description"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:background="@drawable/user_input_border"
                android:textSize="16sp"
                android:hint="@string/task_description"/>

            <!-- Customer -->
            <TextView
                android:id="@+id/labelCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/customer"/>

            <Spinner
                android:id="@+id/customerSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/user_input_border"
                android:spinnerMode="dropdown"/>

            <!-- Assigned To -->
            <TextView
                android:id="@+id/labelAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/person_assigned"/>

            <Spinner
                android:id="@+id/personAssignedSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/user_input_border"
                android:spinnerMode="dropdown"/>

            <!-- Start Date -->
            <TextView
                android:id="@+id/labelStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/start_date"/>

            <EditText
                android:id="@+id/editStartDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="date"
                android:padding="15dp"
                android:background="@drawable/user_input_border"
                android:textSize="16sp"
                android:hint="@string/start_date"
                android:focusable="false"/>

            <!-- End Date -->
            <TextView
                android:id="@+id/labelEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/end_date"/>

            <EditText
                android:id="@+id/editEndDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="date"
                android:padding="15dp"
                android:background="@drawable/user_input_border"
                android:textSize="16sp"
                android:hint="@string/end_date"
                android:focusable="false"/>

            <!-- Priority Level -->
            <TextView
                android:id="@+id/labelPriorityLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/priority_level"/>

            <Spinner
                android:id="@+id/priorityLevelSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/user_input_border"
                android:spinnerMode="dropdown"/>

            <!-- Status -->
            <TextView
                android:id="@+id/labelStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/task_status"/>

            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/user_input_border"
                android:spinnerMode="dropdown"/>

            <!-- Buttons -->
            <Button
                android:id="@+id/cancelEditTask"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/cancel"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/saveEditTask"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/save"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:theme="@style/FilterBtnTheme"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
