<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".Activites.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_marginBottom="20dp"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            android:elevation="20dp"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/register"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:helperText="Required"
            app:helperTextTextColor="@color/red"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAdrdessInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:helperText="Required"
            app:helperTextTextColor="@color/red"
            app:counterMaxLength="15"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32sp"
            android:backgroundTint="@color/Coral"
            android:padding="18dp"
            android:elevation="20dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="30dp"
                android:text="@string/need_help"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/contact_your_employer"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="-10dp"
            android:text="@string/login"
            android:textColor="@color/Coral"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>