<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".Fragments.ViewCustomerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="30dp">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="62dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="60dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:src="@drawable/backbtn" />

            <TextView
                android:id="@+id/pageName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/customer_details_back" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/customer_name"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/contact_name"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/customer_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/customer_email"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/customer_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/customer_type"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/billing_account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/billing_account_number"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/account_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/account_number"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/customer_call_click"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/call_btn"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end">

                <ImageView
                    android:id="@+id/customerUpdateBtn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/edit"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="end"
                    />

                <ImageView
                    android:id="@+id/customerDeleteBtn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/delete"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="start"
        android:text="@string/products_and_services"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customer_products_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>


</LinearLayout>

</ScrollView>

