<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".Fragments.CustomersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:text="@string/your_customers_network" />

        <SearchView
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/filter_btn_border"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:scrollbarSize="2dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/AllFilter"
                    android:text="@string/all"
                    android:textColor="@color/black"
                    android:theme="@style/FilterBtnTheme"
                    android:textAllCaps="false"/>

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:id="@+id/ProspectFilter"
                    android:layout_marginEnd="10dp"
                    android:text="@string/prospect"
                    android:textColor="@color/black"
                    android:background="@drawable/filter_btn_border"
                    android:textAllCaps="false"
                    android:theme="@style/FilterBtnTheme" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:id="@+id/LeadsFilter"
                    android:layout_marginEnd="10dp"
                    android:text="@string/leads"
                    android:textColor="@color/black"
                    android:background="@drawable/filter_btn_border"
                    android:textAllCaps="false"
                    android:theme="@style/FilterBtnTheme" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:id="@+id/ReferralsFilter"
                    android:text="@string/referrals"
                    android:textColor="@color/black"
                    android:background="@drawable/filter_btn_border"
                    android:textAllCaps="false"
                    android:theme="@style/FilterBtnTheme"
                    />

            </LinearLayout>
        </HorizontalScrollView>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/gridView"
            android:layout_marginBottom="100dp"
            android:numColumns="2"/>
    </LinearLayout>

</FrameLayout>